# pwm

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  run.sh  runlocal.sh
db/: password.txt
migration/src/: lib.rs  m20240122_101536_init_tables.rs  m20240125_195446_add_iv.rs
migrations/: 20240119103427_init-db.sql  20240120211206_add_indexes.sql  20240121161721_folder_icons.sql
pwm-web/: .env.dev  bun.lockb  next.config.mjs  package.json  pnpm-lock.yaml
pwm-web/app/: layout.tsx  page.tsx
pwm-web/app/dash/: ClientTest.tsx  KeyChecker.tsx  actions.ts  hider.tsx  layout.tsx  newItemModal.tsx  newitem.tsx  page.tsx  searchbar.tsx  sidebar.tsx  unlockModal.tsx
pwm-web/app/icons/: route.ts
pwm-web/app/login/: IntrnLoginPage.tsx  LoginForm.tsx  actions.ts  page.tsx
pwm-web/app/register/: RegisterForm.tsx  actions.ts  page.tsx
pwm-web/components/app/: clientSidebarFolders.tsx  clientVaultItem.tsx  clientVaultItems.tsx  clientVaultRender.tsx  queryProviderClient.tsx  vaultItemList.tsx
pwm-web/components/app/Forms/: FormNewFolder.tsx  FormNewItem.tsx
pwm-web/components/icons/: HeroiconsMagnifyingGlass16Solid.tsx  HeroiconsPlusSolid.tsx
pwm-web/components/ui/: form.tsx
pwm-web/lib/: crypto.ts  serverTypedefs.ts  serverWrapper.ts  utils.ts
pwm-web/lib/hooks/: checkLogin.ts
pwm-web/lib/state/: app.ts  key.ts
src/: errors.rs  lib.rs  main.rs
src/db/: mod.rs  user.rs  vault.rs
src/db/entities/: access_token.rs  group.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  user.rs  vault.rs  vault_folder.rs  vault_item.rs  vault_website_entry.rs
src/db/models/: mod.rs  user_ex.rs  vault_ex.rs
src/extractors/: cacher.rs  identifiable_device.rs  logged_in.rs  mod.rs
src/routes/: account.rs  mod.rs  vault.rs
