[package]
name = "pwm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = [
  "macros",
  "migrate",
  "runtime-tokio",
  "chrono",
  "tls-rustls",
] }
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }


[features]
postgres = ["sqlx/postgres", "sqlx/uuid"]
default = ["postgres"]
