[package]
name = "pwm"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
panic = "abort"
lto = true
opt-level = 3
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["migration"]

[dependencies]
axum = { version = "0.7.4", features = ["macros", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
scrypt = "0.11.0"
tracing = "0.1"
tracing-subscriber = "0.3"
migration = { path = "migration" }
axum-client-ip = "0.5"
axum-extra = { version = "0.9", features = ["typed-header"] }
sea-orm = { version = "^0.12.0", features = [
  "runtime-tokio-rustls", # `ASYNC_RUNTIME` feature
  "sqlx-postgres",        # `DATABASE_DRIVER` feature
  "chrono",
  "uuid",
  "macros",
] }
tower-http = { version = "0.5.1", features = ["cors"] }
